# trt_crnn_dynamic_cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
config/: trt_crnn.ini
include/: INIReader.hpp  ini.hpp  trt_crnn.hpp  trt_crnn_base.hpp  utils.hpp
src/: CMakeLists.txt  INIReader.cpp  ini.cpp  trt_crnn.cpp
test/: CMakeLists.txt  test.cpp
